Adding a login menu, Json library, and serialized API objects

--- a/TukuiAddOnManagerEnhanced/MainWindow.xaml
+++ b/TukuiAddOnManagerEnhanced/MainWindow.xaml
@@ -9,7 +9,7 @@
         WindowStyle="None"
         
         
-        MinHeight="200"
+        MinHeight="300"
         MinWidth="400"
         
         AllowsTransparency="True"
@@ -121,7 +121,25 @@
         </Grid>
 
         <!-- Body -->
-        
+        <Grid Grid.Row="3" SnapsToDevicePixels="True" >
+            
+            <Grid x:Name="LoginRibbon" Height="90" Margin="8,8,8,0" VerticalAlignment="Top" HorizontalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="148" />
+                    <ColumnDefinition Width="80" />
+                </Grid.ColumnDefinitions>
+                <Rectangle Grid.Column="0" Fill="#FF4D4D4D" />
+                <Rectangle Grid.Column="2" Width="80" Fill="#FF4D4D4D" />
+                <Image Grid.Column="1" x:Name="LoginRibbonImage"  Width="220" Margin="-36,0,-36,-65" Source="Assests/Artwork/LoginRibbon(uHD).png" RenderOptions.BitmapScalingMode="NearestNeighbor" />
+                <Grid Grid.Column="1" Margin="-36,21,-36,-65" >
+                    <TextBlock Text="USERNAME / PASSWORD" Margin="0,8,0,0" Foreground="#FF2E2E2E" FontSize="14" FontFamily="Segoe UI Semibold" VerticalAlignment="Top" HorizontalAlignment="Center" />
+                    <TextBox Height="28" Width="198" Margin="0,36,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" />
+                    <TextBox Height="28" Width="198" Margin="0,68,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" />
+                    <Button Content="LOGIN" Height="24" Width="76" Margin="0,101,11,0" VerticalAlignment="Top" HorizontalAlignment="Right" />
+                </Grid>
+            </Grid>
+        </Grid>
 
         <!-- Bottom Line -->
         <Rectangle Grid.Row="4" Fill="#FF68B6ED" />
