--- a/TukuiAddOnManagerEnhanced/DEV/DevLoginWindow.xaml
+++ b/TukuiAddOnManagerEnhanced/DEV/DevLoginWindow.xaml
@@ -5,6 +5,6 @@
     <Grid>
         <TextBox x:Name="UserName" HorizontalAlignment="Left" Height="23" Margin="34,52,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="Password" HorizontalAlignment="Left" Height="23" Margin="34,80,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="34,108,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="34,108,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
     </Grid>
 </Window>
